# new-online-librarian-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  go.mod  go.sum  main.go
.cargo/: config.toml
.sqlx/: query-2563f6c63336fbc4800417e1ff252e8dd956b3213e10268f1e190bc551836ac6.json  query-2679749f030e2221c0746e7fe34c59b9ffa776c5ccdb6b773f55f17c521babf9.json  query-3fa55e465823ef1da573042a23441a3154ad63857673f9a35128c83c4be86e9f.json  query-59017771481a90cf15e82b0281894b9b85750b49006c43bfe17d26022c4acb91.json  query-60eca45bfc8486a02566a21a9fe6db15c37cb9b286369a01cfcb3281a0d34585.json  query-71146fcd3547eb90f51de4994435d2bf0bec64a22947216ce83acb9c7d349ae9.json  query-746d1667199a6eb9e576cc42ab5d2ec03c0b23d58b615d082aa2444ba3e1142d.json  query-752d139a01ef640bb2bf3575409aeb4eba07cf35984cf0ede40b48f3e4d0f2e0.json  query-766d870cb2944731b30adaff06155dae72706d11b3b432c80069ad7c9a907f00.json  query-79a5dd0e2e60189e0054c62fb66926cd8cb3cfd69dbd94582648f02443ecd0d6.json  query-7d8dc8453288b54d14042a04cf8da73d56fb76b587027989d7d01f8068c7249a.json  query-840a2cac86b6e51ce4868fc93b30e4fe37483cb0f864d906ab592d31ae666e3f.json  query-a37d925be0aa4b91130d40c8b2ea78bb57e0a374c1c392f081ca6e27d1a55b24.json  query-a3bda4f61eadfd247d639824ae15e8c36287bc1d910f599dda122144f4e49922.json  query-a4545573cca75449f251fde35490cf609bcc2cb204a99fbfeabec61ac63023c5.json  query-bce76e35fa78905a62695d201ce3ef0e511e0e015bd4bf0b7f02b0444e4eea43.json  query-c1b1c5940c21022f943836b417fc7b37eb33a42dc25ad8f38c15213fe898c800.json  (+2 more)
configuration/: base.yaml  (+1 more)
(+97 files in other folders)
