[package]
name = "new-online-librarian-backend"
version = "0.1.0"
authors = ["Arthur Rodrigues Cruz <developer.arthur.cruz@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
env_logger = "0.11"

[dependencies.sqlx]
version = "0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12"
