[package]
name = "new-online-librarian-backend"
version = "0.1.0"
authors = ["Arthur Rodrigues Cruz <developer.arthur.cruz@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
chrono = "0.4"

[dependencies.sqlx]
version = "0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12"
